--- a/templates/employees/edit_employee.html
+++ b/templates/employees/edit_employee.html
@@ -1,7 +1,7 @@
 {% extends "admin_master.html" %}
 
 {% block page_content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/glass_theme.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 
 <div class="container py-5">
     <div class="glass-card mx-auto" style="max-width: 900px;">
