--- a/templates/employees/employee_details.html
+++ b/templates/employees/employee_details.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/glass_theme.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 
 <div class="container py-5">
     <div class="row justify-content-center">
