--- a/templates/employees/employee_master.html
+++ b/templates/employees/employee_master.html
@@ -1,7 +1,7 @@
 {% extends "admin_master.html" %}
 {% block page_content %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/glass_theme.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 <style>
     .table-thumb { width: 45px; height: 45px; object-fit: cover; border-radius: 50%; border: 2px solid #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
 </style>
@@ -114,3 +114,4 @@
 
 <script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 {% endblock %}
+
