--- a/templates/employees.html
+++ b/templates/employees.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- Link to Glass Theme -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/glass_theme.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 
 <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-5">
@@ -83,3 +83,4 @@
 </style>
 
 {% endblock %}
+
